RESOLVED FIXED130859
[Mac] HLS streams will report an incorrect natural size.
https://bugs.webkit.org/show_bug.cgi?id=130859
Summary [Mac] HLS streams will report an incorrect natural size.
Jer Noble
Reported 2014-03-27 14:02:25 PDT
[Mac] HLS streams will report an incorrect natural size.
Attachments
Patch (3.22 KB, patch)
2014-03-27 14:05 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2014-03-27 14:05:32 PDT
Eric Carlson
Comment 2 2014-03-27 14:06:51 PDT
Comment on attachment 227977 [details] Patch NLOC FTW!
WebKit Commit Bot
Comment 3 2014-03-28 08:50:04 PDT
Comment on attachment 227977 [details] Patch Clearing flags on attachment: 227977 Committed r166408: <http://trac.webkit.org/changeset/166408>
WebKit Commit Bot
Comment 4 2014-03-28 08:50:07 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.